Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/fields/Total_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Story_Points__c</fullName>
    <formula>Story_Points_SFDC__c+Story_Points_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>