Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/fields/Triggers_Without_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Without_Coverage__c</fullName>
    <description>Number of triggers without the minimum required coverage.</description>
    <inlineHelpText>Number of triggers without the minimum required coverage.</inlineHelpText>
    <label>Triggers Without Coverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>