Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/fields/User_Story_Title__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Title__c</fullName>
    <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
    <inlineHelpText>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</inlineHelpText>
    <label>User Story Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>