Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/fields/userStory_need__c.field-meta.xml
<CustomField>
    <fullName>userStory_need__c</fullName>
    <label>Want to...</label>
    <type>TextArea</type>
</CustomField>