Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/fields/Validate_Only__c.field-meta.xml
<CustomField>
    <fullName>Validate_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
    <label>Validate Only</label>
    <type>Checkbox</type>
</CustomField>