Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/fields/View_in_Git__c.field-meta.xml
<CustomField>
    <fullName>View_in_Git__c</fullName>
    <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
    <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c )), Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(Project__r.Deployment_Flow__r.Git_Repository__r.Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(Project__r.Deployment_Flow__r.Git_Repository__r.Git_Provider__c, &apos;Others&apos;))),
			Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				Project__r.Deployment_Flow__r.Git_Repository__r.Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	),
	&apos;feature/&apos; + Name
)</formula>
    <inlineHelpText>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</inlineHelpText>
    <label>View in Git</label>
    <type>Text</type>
</CustomField>