Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <label>Bug</label>
</RecordType>