Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/recordTypes/User_Story.recordType-meta.xml
<RecordType>
    <fullName>User_Story</fullName>
    <active>true</active>
    <label>User Story</label>
</RecordType>