Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/validationRules/Cancellation_reason_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_reason_required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  TEXT(Status__c)==&quot;Cancelled&quot;,
  ISBLANK(Cancellation_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>A cancellation reason must be given.</errorMessage>
</ValidationRule>