Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/validationRules/Test_scratch_orgs_cannot_be_used_for_dev.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_scratch_orgs_cannot_be_used_for_dev</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Org_Credential__r.Org_Type__c) == &apos;Scratch Org - Test only&apos;</errorConditionFormula>
    <errorDisplayField>Org_Credential__c</errorDisplayField>
    <errorMessage>Test scratch orgs cannot be used for developments</errorMessage>
</ValidationRule>