Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Story_Title__c</columns>
    <columns>userStory_Role__c</columns>
    <columns>userStory_need__c</columns>
    <columns>userStory_reason__c</columns>
    <columns>Story_Points_SFDC__c</columns>
    <columns>Story_Points_Other__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>Epic__c</columns>
    <columns>Sprint__c</columns>
    <columns>Release__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>