Dummy_Package_for_scratch_org/main/default/objects/User_Story__c/listViews/Cli_Listview.listView-meta.xml
<ListView>
    <fullName>Cli_Listview</fullName>
    <columns>NAME</columns>
    <columns>User_Story_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>Org_Credential__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Cli Listview</label>
</ListView>